--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<div class="container-fluid row mt-5">
-  <div class="col-12 text-center mb-5">
-    <h1 class="display-4">Administration des Collègues</h1>
+<div class="container-fluid">
+  <div class="row p-3">
+    <div class="col-12 text-center mb-5">
+      <h1 class="display-4">Administration des Collègues</h1>
+    </div>
+    <app-collegue-recherche-par-nom class="col-lg-6"></app-collegue-recherche-par-nom>
+    <app-collegue class="col-lg-6"></app-collegue>
   </div>
-  <app-collegue-recherche-par-nom class="col-lg-6"></app-collegue-recherche-par-nom>
-  <app-collegue [collegue]="collegue"class="col-lg-6"></app-collegue>
 </div>
- 
