Récupération des données de l'application collègues-api par requêtes html. Utilisation de ces données dans collegue-component et collegue-recherche-par-nom-component.

--- a/src/app/collegue-recherche-par-nom/collegue-recherche-par-nom.component.html
+++ b/src/app/collegue-recherche-par-nom/collegue-recherche-par-nom.component.html
@@ -7,7 +7,9 @@
   <div *ngIf="matricules.length > 0" class="container-fluid text-center mt-2">
     <ul class="list-group list-group-flush">
       <div>
-        <li *ngFor="let matricule of matricules" class="list-group-item">{{matricule}}</li>
+        <li *ngFor="let matricule of matricules" class="list-group-item">
+          <button class="btn btn-outline-dark btn-sm" (click)="selectionner(matricule)">{{matricule}}</button>
+        </li>
       </div>
     </ul>
   </div>
