--- a/src/app/collegue-recherche-par-nom/collegue-recherche-par-nom.component.html
+++ b/src/app/collegue-recherche-par-nom/collegue-recherche-par-nom.component.html
@@ -1,16 +1,31 @@
 <div class="form-group row ">
-  <label class="col-md-4 col-form-label text-center" for="recherche">Recherche par nom :</label>
-  <input #saisie type="search" class="form-control col-md-5 mb-2" name="recherche" placeholder="Recherche" />
-  <div class="col-md-3 text-center">
-    <button class="btn btn-dark" name="rechercher" (click)="recherche(saisie.value)">Rechercher</button>
-  </div>
-  <div *ngIf="matricules.length > 0" class="container-fluid text-center mt-2">
-    <ul class="list-group list-group-flush">
-      <div>
-        <li *ngFor="let matricule of matricules" class="list-group-item">
-          <button class="btn btn-outline-dark btn-sm" (click)="selectionner(matricule)">{{matricule}}</button>
-        </li>
+  <form class="col-md-12" (submit)="recherche(saisie.value); $event.preventDefault()">
+    <div class="row">
+      <label class="col-md-4 col-form-label text-center" for="recherche">Recherche par nom :</label>
+      <input #saisie type="search" class="form-control col-md-5 mb-2" name="recherche" placeholder="Recherche" />
+      <div class="col-md-3 text-center">
+        <button class="btn btn-dark" type="submit" name="rechercher">Rechercher</button>
       </div>
+    </div>
+  </form>
+  <div *ngIf="matricules !== undefined" class="container-fluid text-center mt-2">
+    <ul class="list-group">
+      <div *ngIf="matricules.length === 0">
+        <li class="list-group-item w-100">Aucun résultat</li>
+      </div>
+
+      <div *ngIf="matricules.length !== 0">
+      <div *ngFor="let matricule of matricules">
+        <div *ngIf="matricule !== matriculeSelectionne">
+          <li class="list-group-item list-group-item-action clickable w-100" (click)="selectionner(matricule)">
+            {{matricule}}</li>
+        </div>
+        <div *ngIf="matricule === matriculeSelectionne">
+          <li class="list-group-item list-group-item-action list-group-item-dark clickable w-100"
+            (click)="selectionner(matricule)">{{matricule}}</li>
+        </div>
+      </div>
+    </div>
     </ul>
   </div>
 </div>
