--- a/src/app/ajouter-collegue/ajouter-collegue.component.html
+++ b/src/app/ajouter-collegue/ajouter-collegue.component.html
@@ -13,32 +13,32 @@
             <dd class="col-md-7">
               <input [(ngModel)]="formData.lastName" name="lastName" #lastName="ngModel" type="text" class="form-control w-100"
                 required [class.is-invalid]="lastName.dirty && lastName.invalid" minlength="2"/>
-              <div *ngIf="email.dirty && email.invalid" class="text-sm text-danger">Veuillez entrer un nom d'au moins 2 caractères.</div>
+              <div class="invalid-feedback">Veuillez entrer un nom d'au moins 2 caractères.</div>
             </dd>
             <dt class="col-md-5">Prénom</dt>
             <dd class="col-md-7">
               <input [(ngModel)]="formData.firstName" name="firstName" #firstName="ngModel" type="text" class="form-control w-100"
                 required [class.is-invalid]="firstName.dirty && firstName.invalid" minlength="2"/>
-              <div *ngIf="email.dirty && email.invalid" class="text-sm text-danger">Veuillez entrer un prénom d'au moins 2 caractères.</div>
+              <div class="invalid-feedback">Veuillez entrer un prénom d'au moins 2 caractères.</div>
             </dd>
             <dt class="col-md-5">Date de naissance</dt>
             <dd class="col-md-7">
               <input [(ngModel)]="formData.birthDate" name="birthDate" #birthDate="ngModel" type="date" class="form-control w-100"
                 required [class.is-invalid]="birthDate.dirty && birthDate.invalid" />
-              <div *ngIf="email.dirty && email.invalid" class="text-sm text-danger">Veuillez entrer une date de naissance.</div>
+              <div class="invalid-feedback">Veuillez entrer une date de naissance.</div>
             </dd>
             <dt class="col-md-5">Email</dt>
             <dd class="col-md-7">
               <input [(ngModel)]="formData.email" name="email" #email="ngModel" type="text" class="form-control w-100"
                 required [class.is-invalid]="email.dirty && email.invalid" />
-              <div *ngIf="email.dirty && email.invalid" class="text-sm text-danger">Veuillez entrer un email.</div>
+              <div class="invalid-feedback">Veuillez entrer un email.</div>
             </dd>
             <dt class="col-md-5">URL de la photo</dt>
             <dd class="col-md-7 input-group">
               <input [(ngModel)]="formData.pictureUrl" name="pictureUrl" #pictureUrl="ngModel" type="text"
                 class="form-control w-100" minlength="7" required
                 [class.is-invalid]="pictureUrl.dirty && pictureUrl.invalid" />
-              <div *ngIf="pictureUrl.dirty && pictureUrl.invalid" class="text-sm text-danger">Veuillez entrer une url
+              <div class="invalid-feedback">Veuillez entrer une url
                 d'image de plus de 7 caractères.</div>
             </dd>
           </dl>
@@ -51,6 +51,12 @@
             </div>
           </div>
         </form>
+      </div>
+      <div [ngSwitch]="codeErreur" >
+        <div *ngSwitchCase="0" class="alert alert-warning w-100">Serveur injoignable</div>
+        <div *ngSwitchCase="400" class="alert alert-danger w-100">Parametre(s) incorrect(s)</div>
+        <div *ngSwitchCase="404" class="alert alert-danger w-100">Collegue introuvable</div>
+        <div *ngSwitchCase="500" class="alert alert-warning w-100">Erreur interne au serveur</div>
       </div>
     </div>
   </div>
