Changements bootstrap mineurs pour l'affichage des erreurs

--- a/src/app/ajouter-collegue/ajouter-collegue.component.html
+++ b/src/app/ajouter-collegue/ajouter-collegue.component.html
@@ -52,7 +52,7 @@
           </div>
         </form>
       </div>
-      <div [ngSwitch]="codeErreur" >
+      <div [ngSwitch]="codeErreur" class="w-100 m-2">
         <div *ngSwitchCase="0" class="alert alert-warning w-100">Serveur injoignable</div>
         <div *ngSwitchCase="400" class="alert alert-danger w-100">Parametre(s) incorrect(s)</div>
         <div *ngSwitchCase="404" class="alert alert-danger w-100">Collegue introuvable</div>
