--- a/src/app/collegue/collegue.component.html
+++ b/src/app/collegue/collegue.component.html
@@ -30,15 +30,17 @@
                 <dt class="col-md-5">Email</dt>
                 <dd class="col-md-7 input-group">
                   <input [(ngModel)]="formData.email" name="email" #email="ngModel" type="text"
-                    class="form-control w-100" required [class.is-invalid]="email.dirty && email.invalid" />
-                  <div class="invalid-feedback">Veuillez entrer un email.</div>
+                    class="form-control w-100" required [class.is-invalid]="(email.dirty && email.invalid) || causesErreur.email !== undefined" />
+                    <div *ngIf="causesErreur.email !== undefined" class="invalid-feedback">{{causesErreur.email}}</div>
+                    <div *ngIf="causesErreur.email === undefined" class="invalid-feedback">Veuillez entrer une url d'image de plus de 7 caractères.</div>
                 </dd>
                 <dt class="col-md-5">URL de la photo</dt>
                 <dd class="col-md-7 input-group">
                   <input [(ngModel)]="formData.pictureUrl" name="pictureUrl" #pictureUrl="ngModel" type="text"
                     class="form-control w-100" minlength="7" required
-                    [class.is-invalid]="pictureUrl.dirty && pictureUrl.invalid" />
-                  <div class="invalid-feedback">Veuillez entrer une url d'image de plus de 7 caractères.</div>
+                    [class.is-invalid]="(pictureUrl.dirty && pictureUrl.invalid)||causesErreur.pictureUrl !== undefined" />
+                  <div *ngIf="causesErreur.pictureUrl !== undefined" class="invalid-feedback">{{causesErreur.pictureUrl}}</div>
+                  <div *ngIf="causesErreur.pictureUrl === undefined" class="invalid-feedback">Veuillez entrer une url d'image de plus de 7 caractères.</div>
                 </dd>
               </dl>
             </div>
@@ -59,7 +61,6 @@
             </div>
             <div [ngSwitch]="codeErreur" class="w-100 m-3">
               <div *ngSwitchCase="0" class="alert alert-warning w-100">Serveur injoignable</div>
-              <div *ngSwitchCase="400" class="alert alert-danger w-100">Parametre(s) incorrect(s)</div>
               <div *ngSwitchCase="404" class="alert alert-danger w-100">Collegue introuvable</div>
               <div *ngSwitchCase="500" class="alert alert-warning w-100">Erreur interne au serveur</div>
             </div>
