--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,27 @@
-<div class="container-fluid">
-  <div class="row p-3">
-    <div class="col-12 text-center mb-5">
-      <h1 class="display-4">Administration des Collègues</h1>
-    </div>
-    <app-collegue-recherche-par-nom class="col-lg-6"></app-collegue-recherche-par-nom>
-    <div *ngIf="etat === 0" class="col-lg-6"><app-collegue></app-collegue></div>
-    <div *ngIf="etat === 1" class="col-lg-6"><app-ajouter-collegue></app-ajouter-collegue></div>
-    
+
+
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <div class="navbar-brand">Logo</div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link " routerLink="/accueil" routerLinkActive="active" >Accueil</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/gallerie" routerLinkActive="active" >Gallerie</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/apropos" routerLinkActive="active" >A propos</a>
+      </li>
+    </ul>
   </div>
-</div>
+</nav>
+
+<router-outlet></router-outlet>
+
+<footer style="bottom: 0">
+  <p class="text-center text-sm" >2019 - Glen OLLIVIER</p>
+</footer>
