gestion de la connexion des utilisateurs conformément aux changements du back. pas encore de lien vers la page de connexion, mais elle est accessible à /login

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -4,8 +4,8 @@
       <h1 class="display-4">Administration des Collègues</h1>
     </div>
     <app-collegue-recherche-par-nom class="col-lg-6"></app-collegue-recherche-par-nom>
-    <div *ngIf="etat === 0" class="col-lg-6"><app-collegue></app-collegue></div>
-    <div *ngIf="etat === 1" class="col-lg-6"><app-ajouter-collegue></app-ajouter-collegue></div>
+    <div class="col-lg-6"><router-outlet></router-outlet></div>
+    
     
   </div>
 </div>
