Gestion d'erreurs de connexion

--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -13,6 +13,7 @@
         <input type="submit" class="btn btn-primary">
       </div>
     </form>
+    <div *ngIf="loginError !== undefined" class="alert alert-danger w-100">{{loginError}}</div>
 
   </div>
 </div>
